Text + Image component - Button is not displaying on enable of softconversion form - Fixed. Subscription Form - Thank you popup alignment fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/subscriptionform/_subscriptionform.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/subscriptionform/_subscriptionform.scss
@@ -182,8 +182,8 @@
             &-header {
                 border: 0;
                 padding: 0;
-
-                h2.pw-subscription__header__heading {
+                
+                .pw-subscription__thankYouTitle {
                     text-align: center;
                 }
             }
